--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
-import Container from "@components/container.astro";
 import Layout from "@layouts/Layout.astro";
+import { Astro } from '@astro/types';
 ---
-
+<Astro.Redirect to="/rent" />
 <Layout title="">
 </Layout>
