--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -1,10 +1,10 @@
 ---
 import Container from '@components/container.astro';
-import Link from '@components/ui/link.astro';
+import { Image } from 'astro:assets';
+import profile from '../../img/profile.jpg'
 
 import { Astronav, MenuItems, MenuIcon } from 'astro-navbar';
 
-import { Image } from 'astro:assets';
 const menuitems = [
   {
     title: 'About',
@@ -16,7 +16,7 @@ const menuitems = [
   },
   {
     title: 'Rent',
-    path: '/rent',
+    path: '/',
   },
   {
     title: 'Contact',
@@ -60,8 +60,7 @@ const menuitems = [
     <div>
       <div class="flex items-center md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
         <button type="button" class="flex text-sm bg-gray-800 rounded-full md:me-0 focus:ring-4 focus:ring-gray-300 dark:focus:ring-gray-600" id="user-menu-button" aria-expanded="false" data-dropdown-toggle="user-dropdown" data-dropdown-placement="bottom">
-          <span class="sr-only">Open user menu</span>
-          <img class="w-8 h-8 rounded-full" src="/docs/images/people/profile-picture-3.jpg" alt="user photo">
+          <Image src={profile} class:list={"w-8 h-8 rounded-full"} alt={'user'}/>
         </button>
         <div class="z-50 hidden my-4 text-base list-none bg-white divide-y divide-gray-100 rounded-lg shadow dark:bg-gray-700 dark:divide-gray-600" id="user-dropdown">
           <div class="px-4 py-3">
