--- a/src/components/apartmentDetails.astro
+++ b/src/components/apartmentDetails.astro
@@ -3,142 +3,145 @@ import '@fortawesome/fontawesome-free/css/all.min.css';
 import { Image } from 'astro:assets';
 import home from '.././img/home.jpg';
 ---
-<div class="md:flex gap-6 mt-5">
-  <div class="lg:w-4/6" >
-    <div class="flex justify-between items-center w-full">
-      <div class="flex-auto lg:grid lg:grid-cols-2">
-        <div>
-          <h1 class="text-xl">Cosy Apartment for rent</h1>
-          <div class="flex justify-betwen">
-            <a> <img src="" /></a>
-            <span class="text-lg font-medium">New York, USA</span>
+<div>
+  <div class="md:flex gap-6 mt-5">
+    <div class="lg:w-4/6" >
+      <div class="flex justify-between items-center w-full">
+        <div class="flex-auto lg:grid lg:grid-cols-2">
+          <div>
+            <h1 class="text-xl">Cosy Apartment for rent</h1>
+            <div class="flex justify-betwen">
+              <a> <img src="" /></a>
+              <span class="text-lg font-medium">New York, USA</span>
+            </div>
+          </div>
+          <div class="flex items-center gap-2 font-bold text-blue-gray-500 lg:ml-44">
+            4.7
+            <div class="inline-flex items-center">
+              <span>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 24 24"
+                  fill="currentColor"
+                  class="w-6 h-6 text-yellow-700 cursor-pointer">
+                  <path
+                    fill-rule="evenodd"
+                    d="M10.788 3.21c.448-1.077 1.976-1.077 2.424 0l2.082 5.007 5.404.433c1.164.093 1.636 1.545.749 2.305l-4.117 3.527 1.257 5.273c.271 1.136-.964 2.033-1.96 1.425L12 18.354 7.373 21.18c-.996.608-2.231-.29-1.96-1.425l1.257-5.273-4.117-3.527c-.887-.76-.415-2.212.749-2.305l5.404-.433 2.082-5.006z"
+                    clip-rule="evenodd"></path>
+                </svg>
+              </span>
+              <span>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 24 24"
+                  fill="currentColor"
+                  class="w-6 h-6 text-yellow-700 cursor-pointer">
+                  <path
+                    fill-rule="evenodd"
+                    d="M10.788 3.21c.448-1.077 1.976-1.077 2.424 0l2.082 5.007 5.404.433c1.164.093 1.636 1.545.749 2.305l-4.117 3.527 1.257 5.273c.271 1.136-.964 2.033-1.96 1.425L12 18.354 7.373 21.18c-.996.608-2.231-.29-1.96-1.425l1.257-5.273-4.117-3.527c-.887-.76-.415-2.212.749-2.305l5.404-.433 2.082-5.006z"
+                    clip-rule="evenodd"></path>
+                </svg>
+              </span>
+              <span>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 24 24"
+                  fill="currentColor"
+                  class="w-6 h-6 text-yellow-700 cursor-pointer">
+                  <path
+                    fill-rule="evenodd"
+                    d="M10.788 3.21c.448-1.077 1.976-1.077 2.424 0l2.082 5.007 5.404.433c1.164.093 1.636 1.545.749 2.305l-4.117 3.527 1.257 5.273c.271 1.136-.964 2.033-1.96 1.425L12 18.354 7.373 21.18c-.996.608-2.231-.29-1.96-1.425l1.257-5.273-4.117-3.527c-.887-.76-.415-2.212.749-2.305l5.404-.433 2.082-5.006z"
+                    clip-rule="evenodd"></path>
+                </svg>
+              </span>
+              <span>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 24 24"
+                  fill="currentColor"
+                  class="w-6 h-6 text-yellow-700 cursor-pointer">
+                  <path
+                    fill-rule="evenodd"
+                    d="M10.788 3.21c.448-1.077 1.976-1.077 2.424 0l2.082 5.007 5.404.433c1.164.093 1.636 1.545.749 2.305l-4.117 3.527 1.257 5.273c.271 1.136-.964 2.033-1.96 1.425L12 18.354 7.373 21.18c-.996.608-2.231-.29-1.96-1.425l1.257-5.273-4.117-3.527c-.887-.76-.415-2.212.749-2.305l5.404-.433 2.082-5.006z"
+                    clip-rule="evenodd"></path>
+                </svg>
+              </span>
+              <span>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="w-6 h-6 cursor-pointer text-blue-gray-500">
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M11.48 3.499a.562.562 0 011.04 0l2.125 5.111a.563.563 0 00.475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 00-.182.557l1.285 5.385a.562.562 0 01-.84.61l-4.725-2.885a.563.563 0 00-.586 0L6.982 20.54a.562.562 0 01-.84-.61l1.285-5.386a.562.562 0 00-.182-.557l-4.204-3.602a.563.563 0 01.321-.988l5.518-.442a.563.563 0 00.475-.345L11.48 3.5z">
+                  </path>
+                </svg>
+              </span>
+            </div>
           </div>
         </div>
-        <div class="flex items-center gap-2 font-bold text-blue-gray-500 lg:ml-44">
-          4.7
-          <div class="inline-flex items-center">
-            <span>
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 24 24"
-                fill="currentColor"
-                class="w-6 h-6 text-yellow-700 cursor-pointer">
-                <path
-                  fill-rule="evenodd"
-                  d="M10.788 3.21c.448-1.077 1.976-1.077 2.424 0l2.082 5.007 5.404.433c1.164.093 1.636 1.545.749 2.305l-4.117 3.527 1.257 5.273c.271 1.136-.964 2.033-1.96 1.425L12 18.354 7.373 21.18c-.996.608-2.231-.29-1.96-1.425l1.257-5.273-4.117-3.527c-.887-.76-.415-2.212.749-2.305l5.404-.433 2.082-5.006z"
-                  clip-rule="evenodd"></path>
-              </svg>
-            </span>
-            <span>
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 24 24"
-                fill="currentColor"
-                class="w-6 h-6 text-yellow-700 cursor-pointer">
-                <path
-                  fill-rule="evenodd"
-                  d="M10.788 3.21c.448-1.077 1.976-1.077 2.424 0l2.082 5.007 5.404.433c1.164.093 1.636 1.545.749 2.305l-4.117 3.527 1.257 5.273c.271 1.136-.964 2.033-1.96 1.425L12 18.354 7.373 21.18c-.996.608-2.231-.29-1.96-1.425l1.257-5.273-4.117-3.527c-.887-.76-.415-2.212.749-2.305l5.404-.433 2.082-5.006z"
-                  clip-rule="evenodd"></path>
-              </svg>
-            </span>
-            <span>
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 24 24"
-                fill="currentColor"
-                class="w-6 h-6 text-yellow-700 cursor-pointer">
-                <path
-                  fill-rule="evenodd"
-                  d="M10.788 3.21c.448-1.077 1.976-1.077 2.424 0l2.082 5.007 5.404.433c1.164.093 1.636 1.545.749 2.305l-4.117 3.527 1.257 5.273c.271 1.136-.964 2.033-1.96 1.425L12 18.354 7.373 21.18c-.996.608-2.231-.29-1.96-1.425l1.257-5.273-4.117-3.527c-.887-.76-.415-2.212.749-2.305l5.404-.433 2.082-5.006z"
-                  clip-rule="evenodd"></path>
-              </svg>
-            </span>
-            <span>
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 24 24"
-                fill="currentColor"
-                class="w-6 h-6 text-yellow-700 cursor-pointer">
-                <path
-                  fill-rule="evenodd"
-                  d="M10.788 3.21c.448-1.077 1.976-1.077 2.424 0l2.082 5.007 5.404.433c1.164.093 1.636 1.545.749 2.305l-4.117 3.527 1.257 5.273c.271 1.136-.964 2.033-1.96 1.425L12 18.354 7.373 21.18c-.996.608-2.231-.29-1.96-1.425l1.257-5.273-4.117-3.527c-.887-.76-.415-2.212.749-2.305l5.404-.433 2.082-5.006z"
-                  clip-rule="evenodd"></path>
-              </svg>
-            </span>
-            <span>
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke-width="1.5"
-                stroke="currentColor"
-                class="w-6 h-6 cursor-pointer text-blue-gray-500">
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  d="M11.48 3.499a.562.562 0 011.04 0l2.125 5.111a.563.563 0 00.475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 00-.182.557l1.285 5.385a.562.562 0 01-.84.61l-4.725-2.885a.563.563 0 00-.586 0L6.982 20.54a.562.562 0 01-.84-.61l1.285-5.386a.562.562 0 00-.182-.557l-4.204-3.602a.563.563 0 01.321-.988l5.518-.442a.563.563 0 00.475-.345L11.48 3.5z">
-                </path>
-              </svg>
-            </span>
+      </div>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem sit consequuntur odio eaque asperiores, ipsam
+        tempora at repellat, autem nostrum amet ratione a accusamus ex maxime velit excepturi, debitis atque! Minima
+        aperiam quas at, officiis similique ab non necessitatibus, ducimus aspernatur possimus beatae impedit. Dolorum
+        ratione possimus, sapiente aut ipsum, nam deleniti ipsa impedit mollitia perspiciatis animi rerum odit quam.
+      </p>
+      <div class="grid grid-cols-4 gap-4 mt-4">
+        <Image src={home} alt="not found"/>
+        <Image src={home} alt="not found"/>
+        <Image src={home} alt="not found"/>
+        <Image src={home} alt="not found"/>
+      </div>
+    </div>
+    <div>
+      <div class="md:w-full p-2">
+        <span>Brief Information</span><br />
+        <span><span class="font-bold">Owner</span>:Real Estate Agency</span>
+        <br />
+        <div class="grid grid-cols-2 sm:grid-cols-2 md:grid-cols-4 gap-4 p-4">
+          <div class="flex items-center justify-center gap-1">
+            <i class="fas fa-car text-xl text-black-500"></i>
+            <p>car</p>
+          </div>
+          <div class="flex items-center justify-center gap-1">
+            <i class="fas fa-car text-xl text-black-500"></i>
+            <p>car</p>
+          </div>
+          <div class="flex items-center justify-center gap-1">
+            <i class="fas fa-car text-xl text-black-500"></i>
+            <p>car</p>
+          </div>
+          <div class="flex items-center justify-center gap-1">
+            <i class="fas fa-car text-xl text-black-500"></i>
+            <p>car</p>
           </div>
         </div>
-      </div>
-    </div>
-    <p>
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem sit consequuntur odio eaque asperiores, ipsam
-      tempora at repellat, autem nostrum amet ratione a accusamus ex maxime velit excepturi, debitis atque! Minima
-      aperiam quas at, officiis similique ab non necessitatibus, ducimus aspernatur possimus beatae impedit. Dolorum
-      ratione possimus, sapiente aut ipsum, nam deleniti ipsa impedit mollitia perspiciatis animi rerum odit quam.
-    </p>
-    <div class="grid grid-cols-4 gap-4 mt-4">
-      <Image src={home} alt="not found"/>
-      <Image src={home} alt="not found"/>
-      <Image src={home} alt="not found"/>
-      <Image src={home} alt="not found"/>
-    </div>
-  </div>
-  <div>
-    <div class="md:w-full p-2">
-      <span>Brief Information</span><br />
-      <span><span class="font-bold">Owner</span>:Real Estate Agency</span>
-      <br />
-      <div class="grid grid-cols-2 sm:grid-cols-2 md:grid-cols-4 gap-4 p-4">
-        <div class="flex items-center justify-center gap-1">
-          <i class="fas fa-car text-xl text-black-500"></i>
-          <p>car</p>
-        </div>
-        <div class="flex items-center justify-center gap-1">
-          <i class="fas fa-car text-xl text-black-500"></i>
-          <p>car</p>
-        </div>
-        <div class="flex items-center justify-center gap-1">
-          <i class="fas fa-car text-xl text-black-500"></i>
-          <p>car</p>
-        </div>
-        <div class="flex items-center justify-center gap-1">
-          <i class="fas fa-car text-xl text-black-500"></i>
-          <p>car</p>
-        </div>
-      </div>
-      <div class="flex justify-between">
-        <div>
-          <p>1-day rent</p>
-          <p>
-            <span class="text-2xl font-bold"><i class="fa-solid fa-euro-sign"></i> 80 </span>/<span>&nbsp; night</span>
-          </p>
+        <div class="flex justify-between">
+          <div>
+            <p>1-day rent</p>
+            <p>
+              <span class="text-2xl font-bold"><i class="fa-solid fa-euro-sign"></i> 80 </span>/<span>&nbsp; night</span>
+            </p>
+          </div>
+          <div>
+            <p>1-day rent</p>
+            <p>
+              <span class="text-2xl font-bold"><i class="fa-solid fa-euro-sign"></i> 80 </span>/<span>&nbsp; night</span>
+            </p>
+          </div>
         </div>
         <div>
-          <p>1-day rent</p>
-          <p>
-            <span class="text-2xl font-bold"><i class="fa-solid fa-euro-sign"></i> 80 </span>/<span>&nbsp; night</span>
-          </p>
-        </div>
-      </div>
-      <div>
-        <div class="hidden lg:flex items-center gap-4 mt-3 w-5/6">
-          <button class="px-16 py-2 bg-black text-white font-semibold rounded-md"> Click Me </button>
+          <div class="lg:flex items-center gap-4 mt-3 lg:w-5/6">
+            <button class="px-16 bg-black text-white font-semibold rounded-md"> Contact me </button>
+          </div>
         </div>
       </div>
     </div>
   </div>
 </div>
+
