--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -2,6 +2,7 @@
 import Container from '@components/container.astro';
 import { Image } from 'astro:assets';
 import profile from '../../img/profile.jpg';
+import '../../style/navbar.css'
 
 import { Astronav, MenuItems, MenuIcon } from 'astro-navbar';
 
@@ -23,21 +24,29 @@ const menuitems = [
 		path: '/contact',
 	},
 ];
+
+const userProfileMenu = [
+	'Dashboard',
+	'Setting',
+	'Earnings',
+	'Sign out'
+]
+
 ---
 
 <Container>
-	<header class="flex flex-col lg:flex-row justify-between items-center my-5">
+	<header class="header">
 		<Astronav>
-			<div class="flex w-full lg:w-auto items-center justify-between">
+			<div class="title">
 				<a href="/" class="text-lg"
 					><span class="font-bold text-slate-800">The</span><span class="text-slate-500">House</span>
 				</a>
-				<div class="block lg:hidden">
-					<MenuIcon class="w-4 h-4 text-gray-800" />
+				<div class="menuIcon">
+					<MenuIcon class="menuOption" />
 				</div>
 			</div>
-			<MenuItems class="hidden w-full lg:w-auto mt-2 lg:flex lg:mt-0">
-				<ul class="flex flex-col lg:flex-row lg:gap-3">
+			<MenuItems class="menuItes">
+				<ul class="navOption">
 					{
 						menuitems.map((item, index) => (
 							<>
@@ -45,7 +54,7 @@ const menuitems = [
 									<li>
 										<a
 											href={item.path}
-											class="flex lg:px-3 py-2 items-center text-gray-600 hover:text-gray-900"
+											class="navOptionLink"
 										>
 											<span> {item.title}</span>
 										</a>
@@ -55,14 +64,13 @@ const menuitems = [
 						))
 					}
 				</ul>
-				<div class="lg:hidden flex items-center mt-3 gap-4"></div>
 			</MenuItems>
 		</Astronav>
 		<div>
 			<div class="flex items-center md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
 				<button
 					type="button"
-					class="flex text-sm bg-gray-800 rounded-full md:me-0 focus:ring-4 focus:ring-gray-300 dark:focus:ring-gray-600"
+					class="userBtn"
 					id="user-menu-button"
 					aria-expanded="false"
 					data-dropdown-toggle="user-dropdown"
@@ -71,42 +79,26 @@ const menuitems = [
 					<Image src={profile} class:list={'w-8 h-8 rounded-full'} alt={'user'} />
 				</button>
 				<div
-					class="z-50 hidden my-4 text-base list-none bg-white divide-y divide-gray-100 rounded-lg shadow dark:bg-gray-700 dark:divide-gray-600"
+					class="userDropDown"
 					id="user-dropdown"
 				>
 					<div class="px-4 py-3">
-						<span class="block text-sm text-gray-900 dark:text-white">Bonnie Green</span>
-						<span class="block text-sm text-gray-500 truncate dark:text-gray-400">name@flowbite.com</span>
+						<span class="userName">Bonnie Green</span>
+						<span class="userName dark:text-gray-400">name@flowbite.com</span>
 					</div>
 					<ul class="py-2" aria-labelledby="user-menu-button">
-						<li>
-							<a
-								href="#"
-								class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white"
-								>Dashboard</a
-							>
+						{
+							userProfileMenu.map((data)=>(
+								<>
+								{
+								<li>
+							<a href="#" class="userMenuOption" >
+									{data}</a>
 						</li>
-						<li>
-							<a
-								href="#"
-								class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white"
-								>Settings</a
-							>
-						</li>
-						<li>
-							<a
-								href="#"
-								class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white"
-								>Earnings</a
-							>
-						</li>
-						<li>
-							<a
-								href="#"
-								class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white"
-								>Sign out</a
-							>
-						</li>
+								}
+								</>	
+							))
+						}			
 					</ul>
 				</div>
 			</div>
