--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -45,9 +45,9 @@ const makeTitle = title ? title + ' | ' + 'The House' : 'Astroship - Starter Tem
     />
   </head>
   <body>
-    <Navbar />
+    <!-- <Navbar /> -->
     <slot />
-    <Footer />
+    <!-- <Footer /> -->
     <style is:global>
       img {
         content-visibility: auto;
