--- a/src/components/carosouel.astro
+++ b/src/components/carosouel.astro
@@ -1,74 +1,74 @@
 ---
-import home from ".././img/home.jpg";
+import home from ".././img/home.jpeg";
 import home1 from ".././img/home1.jpeg";
 import home2 from ".././img/home2.jpeg";
 import { Image } from "astro:assets";
 ---
 
-<div class="relative w-full max-w-4xl mx-auto mt-10">
+<div class="relative w-full max-w-4xl mx-auto">
     <div class="overflow-hidden">
         <div
             id="slider"
-            class="flex transition-transform duration-700 ease-in-out"
+            class="flex transition-transform duration-700 ease-in-out pb-5"
         >
             <!-- Display the images in a loop -->
-            <Image
-                src={home}
-                alt="Slide 1"
+            <div
                 class="w-full sm:w-full md:w-1/3 lg:w-1/4 flex-shrink-0 object-cover p-4"
-            />
-            <Image
-                src={home1}
-                alt="Slide 2"
+            >
+                <Image src={home} alt="Slide 1" class="homeImg" />
+            </div>
+            <div
                 class="w-full sm:w-full md:w-1/3 lg:w-1/4 flex-shrink-0 object-cover p-4"
-            />
-            <Image
-                src={home2}
-                alt="Slide 3"
+            >
+                <Image src={home1} alt="Slide 2" class="homeImg" />
+            </div>
+            <div
                 class="w-full sm:w-full md:w-1/3 lg:w-1/4 flex-shrink-0 object-cover p-4"
-            />
-            <Image
-                src={home}
-                alt="Slide 4"
+            >
+                <Image src={home2} alt="Slide 3" class="homeImg" />
+            </div>
+            <div
                 class="w-full sm:w-full md:w-1/3 lg:w-1/4 flex-shrink-0 object-cover p-4"
-            />
-            <Image
-                src={home1}
-                alt="Slide 5"
+            >
+                <Image src={home} alt="Slide 4" class="homeImg" />
+            </div>
+            <div
                 class="w-full sm:w-full md:w-1/3 lg:w-1/4 flex-shrink-0 object-cover p-4"
-            />
-            <Image
-                src={home2}
-                alt="Slide 6"
+            >
+                <Image src={home1} alt="Slide 5" class="homeImg" />
+            </div>
+            <div
                 class="w-full sm:w-full md:w-1/3 lg:w-1/4 flex-shrink-0 object-cover p-4"
-            />
-            <Image
-                src={home}
-                alt="Slide 1"
+            >
+                <Image src={home2} alt="Slide 6" class="homeImg" />
+            </div>
+            <div
                 class="w-full sm:w-full md:w-1/3 lg:w-1/4 flex-shrink-0 object-cover p-4"
-            />
-            <Image
-                src={home1}
-                alt="Slide 2"
+            >
+                <Image src={home} alt="Slide 1" class="homeImg" />
+            </div>
+            <div
                 class="w-full sm:w-full md:w-1/3 lg:w-1/4 flex-shrink-0 object-cover p-4"
-            />
-            <Image
-                src={home2}
-                alt="Slide 3"
+            >
+                <Image src={home1} alt="Slide 2" class="homeImg" />
+            </div>
+            <div
                 class="w-full sm:w-full md:w-1/3 lg:w-1/4 flex-shrink-0 object-cover p-4"
-            />
-            <Image
-                src={home}
-                alt="Slide 4"
+            >
+                <Image src={home2} alt="Slide 3" class="homeImg" />
+            </div>
+            <div
                 class="w-full sm:w-full md:w-1/3 lg:w-1/4 flex-shrink-0 object-cover p-4"
-            />
+            >
+                <Image src={home} alt="Slide 4" class="homeImg" />
+            </div>
         </div>
     </div>
 </div>
 
 <script>
     let currentIndex = 0;
-    const totalImages = 6; // Original number of images
+    const totalImages = 10; // Original number of images
 
     function updateSlider() {
         const slider = document.getElementById("slider");
@@ -116,5 +116,5 @@ import { Image } from "astro:assets";
     setInterval(nextSlide, 3000);
 
     // Update the slider on window resize to ensure correct display
-    window.addEventListener('resize', updateSlider);
+    window.addEventListener("resize", updateSlider);
 </script>
