--- a/src/components/moreHouse.astro
+++ b/src/components/moreHouse.astro
@@ -22,7 +22,7 @@ const houseDetails = [
 	<!-- Top-right small "View More" button -->
 
 	<div class="container">
-		<h1 class="text-2xl">More House Details</h1>
+		<h1 class="text-2xl font-bold font-black">More House Details</h1>
 		<a href="#" class="view-more">View More</a>
 	</div>
 
