--- a/src/style/rent.css
+++ b/src/style/rent.css
@@ -8,5 +8,5 @@
 }
 
 .homeImg{
-    @apply md:w-full md:h-[500px] rounded-lg
+    @apply w-full rounded-lg shadow-xl hover:shadow-2xl shadow-gray-400
 }
