--- a/src/components/apartmentDetails.astro
+++ b/src/components/apartmentDetails.astro
@@ -16,10 +16,10 @@ import '../style/moreHouse.css';
       <div class="flex justify-between items-center">
         <div class="flex-auto lg:grid lg:grid-cols-2">
           <div>
-            <h1 class="text-2xl font-bold">The Green House</h1>
+            <h1 class="text-3xl md:text-5xl font-bold">The Green House</h1>
             <div class="flex justify-betwen">
               <a> <i class='fas fa-map-marker-alt'/></a>
-              <span class="font-medium hover:cursor-pointer ml-1">New York, USA</span>
+              <span class="font-medium test-xl hover:cursor-pointer ml-1">New York, USA</span>
             </div>
           </div>
         </div>
