--- a/src/components/container.astro
+++ b/src/components/container.astro
@@ -2,6 +2,6 @@
 const { class: className } = Astro.props;
 ---
 
-<div class:list={["max-w-screen-xl mx-auto px-5 py-10 relative", className]}>
+<div class:list={["max-w-screen-xl mx-auto px-5 py-10 relative overflow-x-scroll", className]}>
   <slot />
 </div>
